Fix pagination mobile css

--- a/styles/style.css
+++ b/styles/style.css
@@ -313,4 +313,13 @@ input[type="text"] + label, input[type="file"] + label, input[type="email"] + la
   width: 120px;
   text-align: center;
 }
+
+.swiper-pagination-bullet{
+  width: 5px !important;
+  height: 5px !important;
+}
+
+.swiper-pagination-horizontal{
+  bottom: 0 !important;
+}
 }
